[package]
name = "tuple_zip"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Convert a tuple of iterators into an iterator of tuples"
repository = "https://github.com/Cyborus04/tuple_zip/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
